--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "axios": "^1.9.0"
   },
   "devDependencies": {
     "typescript": "^4.9.0",
