--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,18 +1,31 @@
+
 {
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false, 
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
     "target": "es2020",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".", 
+    "paths": {
+      "*": [
+        "node_modules/*"
+      ]
+    }
   },
   "compileOnSave": true,
   "include": [
-    "src"
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "lib"
   ]
 }
+
+    
